# MERBIT

./: .gitignore  CMakeLists.txt  README.md  desc.txt  double.txt  nsight.sh  single.txt
config/: config.txt  config2.txt  config4.txt  config_test.txt
include/: class.cuh  fun.cuh  inc.cuh  tile.cuh  tile1.cuh  utils.cuh
include/csr5/: anonymouslib_cuda.h
include/csr5/detail/: utils.h
include/csr5/detail/cuda/: common_cuda.h  csr5_spmv_cuda.h  format_cuda.h  utils_cuda.h
include/hola/: common.cuh  hola.cuh  meta_utils.cuh
src/: class.cu  main.cu  spmv.cu
